# QMLGPC

./: CMakeLists.txt  Main.qml  main.cpp
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/org/verya/QMLGPC/: MainActivity.kt  NotificationHelper.kt  NotificationReceiver.kt  TestBridge.kt
backend/: GpsManager.cpp  GpsManager.h
components/: CButton.qml  GpsDataCard.qml  Header.qml  SatelliteBar.qml  SatelliteView.qml
pages/: AboutDialog.qml
panels/: GpsPanel.qml
theme/: Theme.qml  qmldir
